--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,8 @@
         <author>TehBrian</author>
         <mainClass>xyz.tehbrian.nobedexplosions.NoBedExplosions</mainClass>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <repositories>
