Remove the long name of reload command

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,9 +6,8 @@ website: ${url}
 main: ${mainClass}
 api-version: 1.13
 commands:
-  reloadnobedexplosions:
+  reloadnbe:
     description: Reloads the config of NoBedExplosions.
-    aliases: [reloadnbe]
     permission: nobedexplosions.reload
     usage: /<command>
 permissions:
