--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ description: ${description}
 author: ${author}
 website: ${url}
 main: ${mainClass}
-api-version: 1.13
+api-version: "1.16"
 commands:
   reloadnbe:
     description: Reloads the config of NoBedExplosions.
