Remove useless version in config.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -3,7 +3,7 @@
 # |  NoBedExplosions  | |  https://github.com/ItsTehBrian/NoBedExplosions  |
 # |    by TehBrian    | |  https://spigotmc.org/resources/65808            |
 # |                   | |  https://discord.me/tehbrian           /---------+
-# |   Version 1.0.4   | |                               /-------/
+# | made with love <3 | |                               /-------/
 # |                   | |    /-------------------------/
 # +-------------------+ +---/
 
