--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 
     compile 'com.google.inject:guice:5.0.1'
 
-    compile 'cloud.commandframework:cloud-core:1.4.0'
+    compile 'cloud.commandframework:cloud-bukkit:1.4.0'
 
     implementation "net.kyori:adventure-platform-bukkit:4.0.0-SNAPSHOT"
     implementation "net.kyori:adventure-text-minimessage:4.0.0-SNAPSHOT"
