--- a/build.gradle
+++ b/build.gradle
@@ -34,8 +34,8 @@ dependencies {
 
     compile 'cloud.commandframework:cloud-bukkit:1.4.0'
 
-    implementation "net.kyori:adventure-platform-bukkit:4.0.0-SNAPSHOT"
-    implementation "net.kyori:adventure-text-minimessage:4.0.0-SNAPSHOT"
+    implementation "net.kyori:adventure-platform-bukkit:4.8.1"
+    implementation "net.kyori:adventure-text-minimessage:4.1.0-SNAPSHOT"
 }
 
 processResources {
