--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,11 +6,13 @@ authors: [ TehBrian ]
 description: Fully control bed and respawn anchor functionality across all worlds, including allowing sleep in the nether or end!
 website: https://www.spigotmc.org/resources/65808
 commands:
-  reloadnbe:
-    description: Reloads the config of NoBedExplosions.
-    permission: nobedexplosions.reload
+  nbe:
+    description: All commands for NoBedExplosions.
     usage: /<command>
 permissions:
   nobedexplosions.reload:
-    description: Permission to use /reloadnbe.
+    description: Permission to use /nbe reload.
+    default: op
+  nobedexplosions.info:
+    description: Permission to use /nbe info.
     default: op
