--- a/src/main/resources/worlds.yml
+++ b/src/main/resources/worlds.yml
@@ -2,15 +2,25 @@
 # https://docs.adventure.kyori.net/minimessage.html
 
 worlds:
-# EXAMPLE WORLD CONFIGURATION:
-# world_nether:
+  # Disable bed explosions in the nether and end by default.
+  world_nether:
+    bed:
+      mode: allow
+      set_spawn: true
+      disable_all_explosions: true
+  world_the_end:
+    bed:
+      mode: allow
+      set_spawn: true
+      disable_all_explosions: true
+# example_world:
 #   bed:
-#     mode: allow/deny
-#     deny_msg: "<gray>Nope."
+#     mode: allow/deny/explode
+#     message: "<gray>Nope."
 #     set_spawn: true/false
 #     disable_all_explosions: true/false
 #   anchor:
 #     mode: allow/deny
-#     deny_msg: "<red>Absolutely not."
+#     message: "<red>Absolutely not."
 #     set_spawn: true/false
 #     disable_all_explosions: true/false
