--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -5,16 +5,25 @@
 # /nbe
 nbe:
   - ""
-  - "<gray><gradient:red:#f5a5a5>NoBedExplosions</gradient> version <gradient:#a5a5f5:blue>1.2.1</gradient>"
+  - "<gray>-= Running <gradient:red:#f5a5a5>NoBedExplosions</gradient> <gradient:#a5a5f5:blue><version></gradient> =-"
   - ""
   - "<gray>Commands:"
-  - "<dark_gray>- <#f5a5a5>/nbe reload"
+  - "<dark_gray>- <#f5a5f5>/nbe reload"
   - "<dark_gray>- <#a5a5f5>/nbe info"
   - ""
 
 # /nbe reload
-nbe_reload: "<red>›</red> <gray>Reloaded <gradient:red:#f5a5a5>NoBedExplosions</gradient>!"
+nbe-reload: "<gray><red>›</red> Reloaded <gradient:red:#f5a5a5>NoBedExplosions</gradient>!"
 
 # /nbe info
-nbe_info:
-  - "<blue>›</blue> <gray>Info for <aqua><world></aqua>:"
+nbe-info:
+  no-world-config: "<gray><red>›</red> No configuration for world <blue><world></blue> found."
+  header: "<gray><red>›</red> Configuration for world <blue><world></blue>:"
+  bed:
+    - "<gray><dark_gray>|</dark_gray>    bed:"
+    - "<gray><dark_gray>|</dark_gray>      mode: <bed_mode>"
+    - "<gray><dark_gray>|</dark_gray>      message: <bed_message>"
+  anchor:
+    - "<gray><dark_gray>|</dark_gray>    anchor:"
+    - "<gray><dark_gray>|</dark_gray>      mode: <anchor_mode>"
+    - "<gray><dark_gray>|</dark_gray>      message: <anchor_message>"
