update plugin description

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: NoBedExplosions
-description: Fully control bed and respawn anchor functionality across all worlds, including allowing sleep in the nether or end!
+description: Control bed and respawn anchor functionality across all of your worlds, such as allowing sleep in the nether or the end!
 authors: [ TehBrian ]
 website: https://www.spigotmc.org/resources/65808
 
