lang: make consistent the command colors

--- a/src/main/resources/lang.yml
+++ b/src/main/resources/lang.yml
@@ -8,7 +8,7 @@ nbe:
   - "<gray>-= Running <gradient:red:#f5a5a5>NoBedExplosions</gradient> <gradient:#a5a5f5:blue><version></gradient> =-"
   - ""
   - "<gray>Commands:"
-  - "<dark_gray>- <#f5a5f5>/nbe reload"
+  - "<dark_gray>- <#f5a5a5>/nbe reload"
   - "<dark_gray>- <#a5a5f5>/nbe info"
   - ""
 
@@ -19,13 +19,13 @@ nbe-reload:
 
 # /nbe info
 nbe-info:
-  no-world-config: "<gray><red>›</red> No world configuration for <blue><world></blue> found."
-  header: "<gray><red>›</red> World configuration for <blue><world></blue>:"
+  no-world-config: "<blue>›<gray> No world configuration for <#a5a5f5><world></#a5a5f5> found."
+  header: "<blue>›<gray> World configuration for <#a5a5f5><world></#a5a5f5>:"
   bed:
-    - "<gray><dark_gray>|</dark_gray>    bed:"
-    - "<gray><dark_gray>|</dark_gray>      mode: <bed_mode>"
-    - "<gray><dark_gray>|</dark_gray>      message: <bed_message>"
+    - "<dark_gray>|<gray>    bed:"
+    - "<dark_gray>|<gray>      mode: <bed_mode>"
+    - "<dark_gray>|<gray>      message: <bed_message>"
   anchor:
-    - "<gray><dark_gray>|</dark_gray>    anchor:"
-    - "<gray><dark_gray>|</dark_gray>      mode: <anchor_mode>"
-    - "<gray><dark_gray>|</dark_gray>      message: <anchor_message>"
+    - "<dark_gray>|<gray>    anchor:"
+    - "<dark_gray>|<gray>      mode: <anchor_mode>"
+    - "<dark_gray>|<gray>      message: <anchor_message>"
