--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: NoBedExplosions
-description: Control bed and respawn anchor functionality across all of your worlds, such as allowing sleep in the nether or the end!
+description: ${description}
 authors: [ TehBrian ]
 website: https://spigotmc.org/resources/65808
 
