feat: add explode mode that works in overworld
Closes #6

--- a/src/main/resources/worlds.yml
+++ b/src/main/resources/worlds.yml
@@ -11,7 +11,7 @@ worlds:
       mode: allow
 # example-world:
 #   bed:
-#     mode: allow/deny/default
+#     mode: allow/deny/default/explode
 #     message: "<gray>Nope."
 #   anchor:
 #     mode: deny/default
