replace spigot link with gh in plugin.yml, paper in config.yml
Closes #38

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,7 +1,7 @@
 # +-------------------+ +-----------------------------------------------+
 # |                   | |                                               |
 # |  NoBedExplosions  | |  https://github.com/TehBrian/NoBedExplosions  |
-# |    by TehBrian    | |  https://spigotmc.org/resources/65808         |
+# |    by TehBrian    | |  https://forums.papermc.io/threads/221        |
 # |                   | |  https://chat.tehbrian.xyz             /------+
 # | made with love <3 | |                               /-------/
 # |                   | |    /-------------------------/
