update Discord link, downloads -> download

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,9 +2,9 @@
 # |                   | |                                               |
 # |  NoBedExplosions  | |  https://github.com/TehBrian/NoBedExplosions  |
 # |    by TehBrian    | |  https://forums.papermc.io/threads/221        |
-# |                   | |  https://chat.tehbrian.xyz             /------+
-# | made with love <3 | |                               /-------/
-# |                   | |    /-------------------------/
+# |                   | |  https://thbn.me/discord                /-----+
+# | made with love <3 | |                           /------------/
+# |                   | |    /---------------------/
 # +-------------------+ +---/
 
 # World configuration can be found in worlds.yml
