change group from xyz.tehbrian to dev.tehbrian

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,7 +4,7 @@ authors: [ TehBrian ]
 website: https://github.com/TehBrian/NoBedExplosions
 
 version: ${version}
-main: xyz.tehbrian.nobedexplosions.NoBedExplosions
+main: dev.tehbrian.nobedexplosions.NoBedExplosions
 api-version: 1.19
 
 permissions:
